feat: add application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=email-service
 
 #Amazon email source
-amazon.email.source = ${AMAZON_EMAIL_SOURCE:teste@email.com}
+amazon.email.source=${AMAZON_EMAIL_SOURCE:tony_esqueloto@hotmail.com}
+
+#AWS CONFIG
+#aws.region=us-east-2
+aws.accessKeyId=${AWS_ACCESS_KEY_ID:INSERT_YOUR_ACCESS_KEY_HERE}
+aws.secretKey=${AWS_SECRET_KEY:INSERT_YOUR_SECRET_KEY_HER}
